--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,8 @@
 
   <title>Cell Circuits - A searchable repository of published network model hypotheses</title>
 
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
 </head>
 <body id="body-element">
   <form method="POST" name="search" action="/cgi-bin/search/v1.1/search.pl"><br />
