--- a/html/advanced_search.html
+++ b/html/advanced_search.html
@@ -29,8 +29,8 @@
         <input type="text" size="55" name="search_query" value='' title='For information on valid queries, click "About CellCircuits" link to the right'/>
       </td>
       <td align='left' valign='center' rowspan=2>
-         &nbsp;<a class='color-bg-link' href='/index.html' title='Click to go to the Cell Circuits Home Page'>CellCircuits&nbsp;Home</a><br />
-	 &nbsp;<a class='color-bg-link' href='/about_cell_circuits.html'>About&nbsp;CellCircuits</a>
+         &nbsp;<a class='white-bg-link' href='/index.html' title='Click to go to the Cell Circuits Home Page'>CellCircuits&nbsp;Home</a><br />
+	 &nbsp;<a class='white-bg-link' href='/about_cell_circuits.html'>About&nbsp;CellCircuits</a>
       </td>
     </tr>
     <tr>
@@ -97,7 +97,7 @@
 	   <br><em>Mol. Cancer Res.</em> Dec;1(2):103-12.
 	   <br>
 	<p align="right">
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=12496357&query_hl=3">
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=12496357&query_hl=3">
 	    [PubMed]
 	  </a>
 	</p>
@@ -117,7 +117,7 @@
 	   <br><em>Pac. Symp. Biocomput 2005</em> :459-70.
 	<br>
 	<p align="right">
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15759651&query_hl=3">
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15759651&query_hl=3">
 	    [PubMed]
 	  </a>
 	</p>
@@ -141,7 +141,7 @@
 	   <br><em>Science</em> Feb 4;307(5710):724-7.
 	<br>
 	<p align="right">
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15692050&query_hl=3">
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15692050&query_hl=3">
 	    [PubMed]
 	  </a>
 	</p>
@@ -162,7 +162,7 @@
 	   <br><em>Nat. Genetics</em> Mar;38(3):285-93.
 	<!--</a>--> <br>
 	<p align="right">
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=16501559&query_hl=3">
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=16501559&query_hl=3">
 	    [PubMed]
 	  </a>
 	</p>
@@ -186,7 +186,7 @@
    	   <br><em>Pac. Symp. Biocomput. 2002</em> :437-49.
 	<br>
 	<p align="right">
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=11928497&query_hl=3">
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=11928497&query_hl=3">
 	    [PubMed]
 	  </a>
 	</p>
@@ -206,7 +206,7 @@
 	   <br><em>Genome Biol.</em> 5(12):R95. Epub 2004 Nov 29. 
 	   <br>
 	<p align="right">
-            <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15575969&query_hl=3">
+            <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15575969&query_hl=3">
 	    [PubMed]
 	  </a>
 	</p>
@@ -231,7 +231,7 @@
 	   <br><em>Bioinformatics</em> 18 Suppl 1:S233-40.
 	<!--</a>--> <br>
 	<p align="right">
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=12169552&query_hl=3">
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=12169552&query_hl=3">
 	    [PubMed]
 	  </a>
 	</p>
@@ -251,9 +251,9 @@
 	   <br><b>Systematic interpretation of genetic interactions using protein networks.</b>
 	   <br><em>Nat. Biotechnol.</em> May ; 23(5):561-6 <strong>23</strong>, 561 - 566.
 	<p align="right">
-          <a class="color-bg-link" href="KelleyNBT.pdf">[PDF]</a>
-          <a class="color-bg-link" href="http://chianti.ucsd.edu/Kelley2005/">[Supplemental Website]</a>
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15877074&query_hl=14">
+          <a class="white-bg-link" href="KelleyNBT.pdf">[PDF]</a>
+          <a class="white-bg-link" href="http://chianti.ucsd.edu/Kelley2005/">[Supplemental Website]</a>
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15877074&query_hl=14">
 	     [PubMed]
 	  </a>
 	</p>
@@ -279,9 +279,9 @@
 	   <br><b>Conserved Patterns of Protein Interaction in Multiple Species.</b>
 	   <br><em>Proc Natl Acad Sci USA</em>. Feb 8; 102(6):1974-9
 	<p align="right">
-          <a class="color-bg-link" href="SharanPNAS.pdf">[PDF]</a>
-          <a class="color-bg-link" href="http://chianti.ucsd.edu/Sharan2005">[Supplemental Website]</a>
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15687504&query_hl=24">
+          <a class="white-bg-link" href="SharanPNAS.pdf">[PDF]</a>
+          <a class="white-bg-link" href="http://chianti.ucsd.edu/Sharan2005">[Supplemental Website]</a>
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15687504&query_hl=24">
 	    [PubMed]
 	  </a>
 	</p>
@@ -301,9 +301,9 @@
 	   <br><em>Nature</em> Nov 3;438(7064):108-12
 	   <br>
 	<p align="right">
-	  <a class="color-bg-link" href="SuthramNature.pdf">[PDF]</a>
-          <a class="color-bg-link" href="SuthramSupplement.doc">[Supplementary Notes]</a>
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=16267557&query_hl=1">
+	  <a class="white-bg-link" href="SuthramNature.pdf">[PDF]</a>
+          <a class="white-bg-link" href="SuthramSupplement.doc">[Supplementary Notes]</a>
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=16267557&query_hl=1">
 	    [PubMed]
 	  </a>
 	</p>
@@ -327,7 +327,7 @@
 	   <br><em>Genome Biol.</em> 6(7):R62
 	   <br>
 	<p align="right">
-          <a class="color-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15998451&query_hl=3">
+          <a class="white-bg-link" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=15998451&query_hl=3">
 	    [PubMed]
 	  </a>
 	</p>
@@ -344,10 +344,10 @@
 <hr>
 
 <center>
-<a class="color-bg-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="color-bg-link" href="about_cell_circuits.html">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="color-bg-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="color-bg-link" href="http://www-bioeng.ucsd.edu/">UCSD</a><br />
+<a class="white-bg-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="white-bg-link" href="about_cell_circuits.html">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="white-bg-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="white-bg-link" href="http://www-bioeng.ucsd.edu/">UCSD</a><br />
 <p style="font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
 </center>
 
