--- a/html/index.html
+++ b/html/index.html
@@ -38,10 +38,10 @@
   <br /><br />
 
   <center>
-    <a class="color-bg-link" href="advanced_search.html">Advanced Search</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a class="color-bg-link" href="about_cell_circuits.html">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a class="color-bg-link" href="http://chianti.ucsd.edu/idekerlab/index.html">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a class="color-bg-link" href="http://www-bioeng.ucsd.edu/">UCSD</a>
+    <a class="white-bg-link" href="advanced_search.html">Advanced Search</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a class="white-bg-link" href="about_cell_circuits.html">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a class="white-bg-link" href="http://chianti.ucsd.edu/idekerlab/index.html">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a class="white-bg-link" href="http://www-bioeng.ucsd.edu/">UCSD</a>
     <p style="font-style:italic;font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
   </center>
 
