--- a/data/Gandhi2006_NG/legend/legend_FAQ.html
+++ b/data/Gandhi2006_NG/legend/legend_FAQ.html
@@ -16,7 +16,7 @@
 "Analysis of the human protein interactome and comparison with yeast, worm and fly interaction datasets"
 <a class="white-bg-link" href="http://www.nature.com/ng/journal/v38/n3/full/ng1747.html">[fulltext]</a>
    
-<h2>Original figures from this paper</h2><a href="./Human_Fly_lrg.jpg"><img src="./Human_Fly_small.jpg" align="left" hspace="10">Human-Fly<br clear=left><br><a href="./Human_Worm_lrg.jpg"><img src="./Human_Worm_small.jpg" align="left" hspace="10">Human-Worm<br clear=left><br><a href="./Human_Yeast_lrg.jpg"><img src="./Human_Yeast_small.jpg" align="left" hspace="10">Human-Worm
+<h2>Original figures from this paper</h2><a href="./Human_Fly_lrg.jpg"><img src="./Human_Fly_small.jpg" align="left" hspace="10">Networks conserved between Human and Fly<br clear=left><br><a href="./Human_Worm_lrg.jpg"><img src="./Human_Worm_small.jpg" align="left" hspace="10">Networks conserved between Human and Worm<br clear=left><br><a href="./Human_Yeast_lrg.jpg"><img src="./Human_Yeast_small.jpg" align="left" hspace="10">Networks conserved between Human and Yeast
 <br clear=left><br>
 
 <h2>Q&A</h2>
