Added Help links to html files
Check in alter gene_product_synonym script

--- a/html/about_cell_circuits.html
+++ b/html/about_cell_circuits.html
@@ -30,6 +30,7 @@
       <td align='left' valign='center' rowspan=2>
          &nbsp;<a class='white-bg-link' href='/index.html' title='Click to go to the Cell Circuits Home Page'>CellCircuits&nbsp;Home</a><br />
 	 &nbsp;<a class='white-bg-link' href='/advanced_search.html'>Advanced&nbsp;Search</a><br />
+	 &nbsp;<a class="white-bg-link" href="Tutorial-home.html">Help</a>
       </td>
     </tr>
     <tr>
@@ -75,19 +76,19 @@ search for models or specific hypotheses relevant to their interests.
 	    <hr>
 	    <h2>Features</h2>
 	    <b>Search the network models in Cell Circuits ...</b>
-	    <br>(try entering words in <font class="example">underline bold</font> into the search box)
+	    <br>(try entering the words in <font class="example">underline bold</font> into the search box or click on the examples below)
             <ul>
 	      <li><b>By gene</b>
 	      <ul>
-              <li>Using gene names or aliases (registered by the <a class="white-bg-link" href="http://geneontology.org">GO</a> database) (e.g. <font class="example">GCN4</font>) </li>
+              <li>Using gene names or aliases (registered by the <a class="white-bg-link" href="http://geneontology.org">GO</a> database) (e.g. <a class="example" href="/cgi-bin/search/v1.0/search.pl?search_query=GCN4">GCN4</a>) </li>
 	      <li>Models in CellCircuits contain genes from yeast (<i>S. cerevisiae</i>), fly (<i>D. melanogaster</i>), worm (<i>C. elegans</i>), human (<em>H. sapiens</em>), and the malaria parasite (<em>P. falciparum</em>) </li>
-	      <li>An asterisk (*) is a wild card (e.g. <font class="example">RAD*</font>)</li>
-	      <li>Enter more than one gene, each separated by a space. (e.g. <font class="example">YAP1 SOD1</font>)</li>
+	      <li>An asterisk (*) is a wild card (e.g. <a class="example" href="/cgi-bin/search/v1.0/search.pl?search_query=GCN*">GCN*</a>)</li>
+	      <li>Enter more than one gene, each separated by a space. (e.g. <a class="example" href="/cgi-bin/search/v1.0/search.pl?search_query=YAP1%20SOD1">YAP1 SOD1</a>)</li>
 	      </ul
 	      <li><b>By <a class="white-bg-link" href="http://geneontology.org">Gene Ontology</a> annotation</b>
 	      <ul>
-	      <li>Use GO ID numbers (e.g. <font class="example">GO:0003677</font>)</li>
-	      <li>Use partial or complete GO term names (enclosed in double quotes) (e.g. <font class="example">"DNA binding"</font>)</li>
+	      <li>Use GO ID numbers (e.g. <a class="example" href="/cgi-bin/search/v1.0/search.pl?search_query=GO:0003677">GO:0003677</a>)</li>
+	      <li>Use partial or complete GO term names (enclosed in double quotes) (e.g. <a class="example" href="/cgi-bin/search/v1.0/search.pl?search_query=%22DNA%20binding%22">"DNA binding"</a>)</li>
             </ul>
 	    </ul>
 <!--
@@ -109,6 +110,7 @@ search for models or specific hypotheses relevant to their interests.
       <td align="center" colspan="2"><br><br>
         <a class="white-bg-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a class="white-bg-link" href="advanced_search.html">Advanced Search</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+	<a class="white-bg-link" href="Tutorial-home.html">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a class="white-bg-link" href="http://chianti.ucsd.edu/idekerlab/index.html">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a class="white-bg-link" href="http://ucsd.edu">UCSD</a>
 	<p style="font-style:italic;font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
