--- a/html/advanced_search.html
+++ b/html/advanced_search.html
@@ -30,7 +30,8 @@
       </td>
       <td align='left' valign='center' rowspan=2>
          &nbsp;<a class='white-bg-link' href='/index.html' title='Click to go to the Cell Circuits Home Page'>CellCircuits&nbsp;Home</a><br />
-	 &nbsp;<a class='white-bg-link' href='/about_cell_circuits.html'>About&nbsp;CellCircuits</a>
+	 &nbsp;<a class='white-bg-link' href='/about_cell_circuits.html'>About&nbsp;CellCircuits</a><br/>
+	 &nbsp;<a class="white-bg-link" href="Tutorial-home.html">Help</a>
       </td>
     </tr>
     <tr>
@@ -346,6 +347,7 @@
 <center>
 <a class="white-bg-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a class="white-bg-link" href="about_cell_circuits.html">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="white-bg-link" href="Tutorial-home.html">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a class="white-bg-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a class="white-bg-link" href="http://www-bioeng.ucsd.edu/">UCSD</a><br />
 <p style="font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
