ADded help links

--- a/html/Tutorial-home.html
+++ b/html/Tutorial-home.html
@@ -101,6 +101,7 @@
 
 <a class="white-bg-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a class="white-bg-link" href="about_cell_circuits.html">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="white-bg-link" href="Tutorial-home.html">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a class="white-bg-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a class="white-bg-link" href="http://www-bioeng.ucsd.edu/">UCSD</a><br />
 <p style="font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
