--- a/html/advanced_search.html
+++ b/html/advanced_search.html
@@ -31,7 +31,7 @@
       <td align='left' valign='center' rowspan=2>
          &nbsp;<a class='white-bg-link' href='/index.html' title='Click to go to the Cell Circuits Home Page'>CellCircuits&nbsp;Home</a><br />
 	 &nbsp;<a class='white-bg-link' href='/about_cell_circuits.html'>About&nbsp;CellCircuits</a><br/>
-	 &nbsp;<a class="white-bg-link" href="Tutorial-home.html">Help</a>
+	 &nbsp;<a class="white-bg-link" href="Tutorial-advanced-search.html">Help</a>
       </td>
     </tr>
     <tr>
